# skaia

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  RELEASE_NOTES.md  configure.ac  rpm.spec.in
man/: .gitignore  INSTALL.template  Makefile.am  doom.template  iwad_paths.man
man/bash-completion/: .gitignore  Makefile.am
pkg/osx/: AppController.m  GNUmakefile  IWADController.h  IWADController.m
pkg/win32/: GNUmakefile
src/: .gitignore  CMakeLists.txt  Makefile.am  d_iwad.c  d_iwad.h  d_mode.c  d_mode.h  m_config.c  net_common.c  net_query.c  w_main.c
src/doom/: am_map.c  d_main.c  doomstat.c  doomstat.h
src/setup/: Setup.desktop.in  accessibility.c  compatibility.c  display.c  joystick.c  keyboard.c  mainmenu.c  mode.c  mouse.c  multiplayer.c  sound.c
